@@ -1,3 +1,10 @@
+2005-10-04  Don Porter  <dgp@users.sourceforge.net>
+
+	[kennykb-numerics-branch]
+
+	* generic/tclBasic.c:	Updated more callers to make use of
+	TclGetNumberFromObj.  Removed some dead code.
+
 2005-10-03  Don Porter  <dgp@users.sourceforge.net>
 
 	[kennykb-numerics-branch]
